Modified PlantsInfo, Added back and forward buttons, Modified the content

--- a/PlottedAssist/Views/PlantInfo/OtherCare.cshtml
+++ b/PlottedAssist/Views/PlantInfo/OtherCare.cshtml
@@ -67,5 +67,8 @@
                 <img src="~/Picture/Fertilizers.png">
             </div>
         </div>
+        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+            <a href="@Url.Content("~/PlantInfo/WildlifeTips")" class="btn btn-success">Next: Wildlife Friendly Garden</a>
+        </div>
     </div>
 
