--- a/PlottedAssist/Views/PlantInfo/PlantTech.cshtml
+++ b/PlottedAssist/Views/PlantInfo/PlantTech.cshtml
@@ -29,5 +29,8 @@
 
             </ol>
         </div>
+        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+            <a href="@Url.Content("~/PlantInfo/Nurseries")" class="btn btn-success">Next: Nearest Nurseries</a>
+        </div>
     </div>
 
