--- a/PlottedAssist/Views/PlantInfo/Sunshine.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Sunshine.cshtml
@@ -3,33 +3,36 @@
     ViewBag.Title = "Sunshine";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row" style="background-color:#4F6657;">
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
-        <div>
-            <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
+    <div class="row" style="background-color:#4F6657;">
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+            <div>
+                <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
+            </div>
         </div>
-    </div>
-    <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
-        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
-    </div>
-    <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
-        <h2 class="white-word">Determining the Amount of Sunlight</h2>
+        <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+        </div>
+        <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
+            <h2 class="white-word">Determining the Amount of Sunlight</h2>
 
-        <p class="white-word">
-            To determine the amount of sunlight, look at a specific area of your yard at one- to two- hour intervals, starting with when the sun has risen fully until dusk. Sketch out your yard on a sheet of paper and number each section. Write down the sunlight levels for each of these sections at the timed intervals. Numbering the sections will allow you to properly keep track of the sunlight levels in each section so you can better plan your yard.
-        </p>
-        <h2 class="white-word">Full Sun or Full Shade</h2>
-        <p class="white-word">
-            Full sun and full shade are the two easiest lighting situations to determine based on whether they receive six or more hours of direct sun or no sun. <br>For full sun, you're likely to have no tall trees on the south side of it is the south side of your home. The west side of your home may also receive full sun. Full shade locations are typically on the north side of the home or have tall, full trees to the south. To determine full sun or full shade, look at the area in the morning and mid-morning and watch throughout the day until dusk. <br>Most full sun areas have sunlight from at least 10 a.m. through 5 p.m., while most full shade locations will get a little bit of morning sun but be shielded from it for at least six full hours. <br>Note that many full shade plants cannot handle even a small amount of hot afternoon sun, whether they get a full six to eight hours of shade or not.
-        </p>
-        <h2 class="white-word">Partial Shade or Partial Sun</h2>
-        <p class="white-word">
-            While partial shade and partial sun are often used interchangeably, they aren't the same thing.<br> Partial shade refers to a sunny area that gets some shade, typically an area that gets morning shade and four to six hours of the hot afternoon sun. Partial sun, on the other hand, refers to a shady location that gets a few hours of morning sun and four to six hours of shade. <br>Examples of plants that enjoy partial sun or shade include the ever-popular hydrangea (Hydrangea spp.). In areas where the hot sun dries out and heats the soil, hydrangeas prefer partial sun, a shady spot with morning sun. In areas where the soil can remain cool and moist in the afternoon, hydrangeas do better in partial shade with some hot afternoon sun to warm them up.
-        </p>
+            <p class="white-word">
+                To determine the amount of sunlight, look at a specific area of your yard at one- to two- hour intervals, starting with when the sun has risen fully until dusk. Sketch out your yard on a sheet of paper and number each section. Write down the sunlight levels for each of these sections at the timed intervals. Numbering the sections will allow you to properly keep track of the sunlight levels in each section so you can better plan your yard.
+            </p>
+            <h2 class="white-word">Full Sun or Full Shade</h2>
+            <p class="white-word">
+                Full sun and full shade are the two easiest lighting situations to determine based on whether they receive six or more hours of direct sun or no sun. <br>For full sun, you're likely to have no tall trees on the south side of it is the south side of your home. The west side of your home may also receive full sun. Full shade locations are typically on the north side of the home or have tall, full trees to the south. To determine full sun or full shade, look at the area in the morning and mid-morning and watch throughout the day until dusk. <br>Most full sun areas have sunlight from at least 10 a.m. through 5 p.m., while most full shade locations will get a little bit of morning sun but be shielded from it for at least six full hours. <br>Note that many full shade plants cannot handle even a small amount of hot afternoon sun, whether they get a full six to eight hours of shade or not.
+            </p>
+            <h2 class="white-word">Partial Shade or Partial Sun</h2>
+            <p class="white-word">
+                While partial shade and partial sun are often used interchangeably, they aren't the same thing.<br> Partial shade refers to a sunny area that gets some shade, typically an area that gets morning shade and four to six hours of the hot afternoon sun. Partial sun, on the other hand, refers to a shady location that gets a few hours of morning sun and four to six hours of shade. <br>Examples of plants that enjoy partial sun or shade include the ever-popular hydrangea (Hydrangea spp.). In areas where the hot sun dries out and heats the soil, hydrangeas prefer partial sun, a shady spot with morning sun. In areas where the soil can remain cool and moist in the afternoon, hydrangeas do better in partial shade with some hot afternoon sun to warm them up.
+            </p>
 
-        <h2 class="white-word">Fixing Sunlight Issues</h2>
-        <p class="white-word">
-            If you have an area that is shaded by a tree but you'd like to open it up to more light, you have a few options. <br>Thinning out the branches of tall trees can open up the area to more light, sometimes enough to get a partial sun location. You can also heighten the crown of the tree so more light comes in through the bottom, ending in the same result.<br> Planting shade trees on the south side of your lawn will block much of the light if you would prefer a more shaded location.
-        </p>
-    </div>
+            <h2 class="white-word">Fixing Sunlight Issues</h2>
+            <p class="white-word">
+                If you have an area that is shaded by a tree but you'd like to open it up to more light, you have a few options. <br>Thinning out the branches of tall trees can open up the area to more light, sometimes enough to get a partial sun location. You can also heighten the crown of the tree so more light comes in through the bottom, ending in the same result.<br> Planting shade trees on the south side of your lawn will block much of the light if you would prefer a more shaded location.
+            </p>
+        </div>
+        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+            <a href="@Url.Content("~/PlantInfo/OtherCare")" class="btn btn-success">Next: Other Care</a>
+        </div>
     </div>
