--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -30,7 +30,7 @@
                     <h4 style="color:#DDDDDD;margin-top:30px">Invasive plant can create a lot of damage to your garden, they prevent the growth of desirable species,</h4>
                     <h4 style="color:#DDDDDD">and detract from the natural values of our garden.</h4>
                     <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have You Ever Seen These Plant in Your Garden?</h1>
-                    <h4 class="white-word">Fastly check whether the one in your garden is invasive plant by using the filter. </h4>
+                    <h4 class="white-word">Check whether the one in your garden is invasive plant by using the filter. </h4>
 
                     @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
                     new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
