--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -16,7 +16,9 @@
             <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
                 <a href="@Url.Content("~/PlantSets/PlantList")" class="btn btn-default" style="background: #344239; color:white;padding:3%; text-align: center;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-top:10%;">Add Plant From List</a>
             </div>
-        
+            <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+                <a href="@Url.Content("~/PlantInfo/PlantInfo")" class="btn btn-default" style="background: #344239; color:white;padding:3%; text-align: center;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-top:10%;">Planting Guide</a>
+            </div>
         <!--Activity part-->
             <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2" style="margin-top:5%;margin-bottom:10%">
 
