--- a/PlottedAssist/Views/PlantInfo/Nurseries.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Nurseries.cshtml
@@ -7,6 +7,9 @@
         <div>
             <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
+    </div>
+    <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
     </div>    
     <div class="col-md-8 col-md-offset-2 white-word" style="margin-top:50px;padding-bottom:30px;text-align:center">
         <h1>Where can I get the plant?</h1>
