--- a/PlottedAssist/Views/PlantInfo/Prune.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Prune.cshtml
@@ -87,5 +87,8 @@
             </p>
 
         </div>
-</div>
+        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+            <a href="@Url.Content("~/PlantInfo/Sunshine")" class="btn btn-success">Next: Sunshine Guide</a>
+        </div>
+    </div>
 
