--- a/PlottedAssist/Views/PlantInfo/SoilTypes.cshtml
+++ b/PlottedAssist/Views/PlantInfo/SoilTypes.cshtml
@@ -81,5 +81,7 @@
                 <br><br>
             </p>
         </div>
-
+        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+            <a href="@Url.Content("~/PlantInfo/Prune")" class="btn btn-success">Next: Pruning Guide</a>
         </div>
+    </div>
