--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -34,13 +34,14 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plant Info <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Nurseries", "Nurseries", "PlantInfo")</li>
-                            <li>@Html.ActionLink("Correct Planting Techniques", "PlantTech", "PlantInfo")</li>
+                            <li>@Html.ActionLink("Planting Info", "PlantInfo", "PlantInfo")</li>
+                            <li>@Html.ActionLink("Nearest Nurseries", "Nurseries", "PlantInfo")</li>
                             <li>@Html.ActionLink("Watering Guide", "WateringGuide", "PlantInfo")</li>
                             <li>@Html.ActionLink("Soil Types", "SoilTypes", "PlantInfo")</li>
                             <li>@Html.ActionLink("Why Prune", "Prune", "PlantInfo")</li>
                             <li>@Html.ActionLink("Sunshine Guide", "Sunshine", "PlantInfo")</li>
                             <li>@Html.ActionLink("Other Cares", "OtherCare", "PlantInfo")</li>
+                            <li>@Html.ActionLink("Correct Planting Techniques", "PlantTech", "PlantInfo")</li>
                             <li>@Html.ActionLink("Wildlife Friendly Tips", "WildlifeTips", "PlantInfo")</li>
                         </ul>
                     </li>
