Changes on Home Page

--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -12,67 +12,93 @@
         </div>
 
         <!--body-->
-
+        <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-12 col-md-offset-1" style="border: 0px; margin-top: 5%;margin-bottom: 10px ">
+            <h2 class="white-word">What is an indigenous plant?</h2>
+            <p class="white-word">
+                Native plants are plants that grow in a particular country like Australia. Indigenous plants are native to Australia, most importantly they are natural to your local area.
+            </p>
+            <h2 class="white-word">Why plant indigenous plants?</h2>
+            <p class="white-word">
+                In recent years, our indigenous plants have been removed or outcompeted by exotic plants. Indigenous plants were and continue to be an important food source for our local wildlife. They are great to have because they are perfectly suited to the environment that they belong to. This means that they should survive on local weather and thrive in the local soil.
+            </p>
+            <h2 class="white-word">Indigenous plants also:</h2>
+            <ul class="white-word">
+                <li>provide habitat, shelter, and food for local wildlife.</li>
+                <li>require less water and money.</li>
+                <li>support a healthy environment.</li>
+                <li>improve biodiversity.</li>
+                <li>are our heritage – we can help preserve them.</li>
+                <li>are attractive plants with less maintenance. </li>
+                <li>get less plant disease and more pest resistance.</li>
+            </ul>
+        </div>
         <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
+            <!--Our Services-->
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px; margin-top: 0%;margin-bottom: 0px ">
+            </div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border:0px;margin-top:0%;position:relative;margin-bottom:0px;">
+                <h2 class="white-word" style="text-align: center">Our Services</h2>
+            </div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px;margin-top:0%;position:relative;margin-bottom:0px;">
+            </div>
+            <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
 
 
-            <!--Guidance-->
-            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%;margin-bottom: 100px ">
-                <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
-                    <br>
-                    <div style="text-align:center">
-                        <img src="~/Picture/Icon/InvasivePlants.png" style="width:60%;height:50%">
-                    </div>
-                    <br>
-                    <br>
+                <!--Guidance-->
+                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%;margin-bottom: 100px ">
+                    <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
+                        <br>
+                        <div style="text-align:center">
+                            <img src="~/Picture/Icon/InvasivePlants.png" style="width:60%;height:50%">
+                        </div>
+                        <br>
+                        <br>
 
-                    <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">Invasive Plants</h3>
-                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%;text-align:justify">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
-                    <br>
-                    <div style="text-align:center">
-                        <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">Learn more</a>
+                        <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Invasive Plants</h3>
+                        <h3 style="font-size:16px;padding-left:10%;padding-right:10%;">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
+                        <br>
+                        <div style="text-align:center">
+                            <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">Learn more</a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border:0px;margin-top:10%;position:relative;margin-bottom:100px;">
-                <div class="white-word" style="        background: #1E2621;
-
-        border: 0px;
-        border-radius: 10px
+                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border:0px;margin-top:10%;position:relative;margin-bottom:100px;">
+                    <div class="white-word" style="background: #1E2621; border: 0px; border-radius: 10px
 ">
-                    <br>
-                    <div style="text-align:center">
-                        <img src="~/Picture/Icon/PlantList.png" style="width:60%;height:50%">
-                    </div>
-                    <br>
-                    <br>
-                    <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">Plant List</h3>
-                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
-                    <br>
-                    <div style="text-align:center">
-                        <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
+                        <br>
+                        <div style="text-align:center">
+                            <img src="~/Picture/Icon/PlantList.png" style="width:60%;height:50%">
+                        </div>
+                        <br>
+                        <br>
+                        <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Plant List</h3>
+                        <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
+                        <br>
+                        <div style="text-align:center">
+                            <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px;margin-top:10%;position:relative;margin-bottom:100px;">
-                <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
-                    <br>
-                    <div style="text-align:center">
-                        <img src="~/Picture/Icon/MyGarden.png" style="width:60%;height:50%">
-                    </div>
-                    <br>
-                    <br>
+                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px;margin-top:10%;position:relative;margin-bottom:100px;">
+                    <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
+                        <br>
+                        <div style="text-align:center">
+                            <img src="~/Picture/Icon/MyGarden.png" style="width: 60%; height: 50%">
+                        </div>
+                        <br>
+                        <br>
 
 
-                    <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">My Garden</h3>
-                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
-                    <br>
-                    <div style="text-align:center">
-                        <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">Learn more </a>
+                        <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">My Garden</h3>
+                        <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
+                        <br>
+                        <div style="text-align:center">
+                            <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">Learn more </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        </div>
