--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
     </div>
     <footer style="background-color:black;">
         <br>
-        <p style="text-align:center;">&copy; @DateTime.Now.Year - Plotted Plant</p>
+        <p style="text-align:center;color:white;">&copy; @DateTime.Now.Year - Plotted Plant</p>
         <br>
     </footer>
 
