--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -37,43 +37,43 @@
             <div class="control-label col-sm-2">Nick Name</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-white" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="control-label col-sm-2">Water Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantWaterFrq } }) 
                 Recommended frequency: @ViewBag.PlantWaterFrq Days
-                @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-white" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="control-label col-sm-2">Prune Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantPruningFrq} }) 
                 Recommended frequency: @ViewBag.PlantPruningFrq Days
-                @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-white" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="control-label col-sm-2">Fertilize Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantFertilizerFrq} }) 
                 Recommended frequency: @ViewBag.PlantFertilizerFrq Days
-                @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-white" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="control-label col-sm-2">Mist Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantMistFrq} }) 
                 Recommended frequency: @ViewBag.PlantMistFrq Days
-                @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @type = "number", @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @type = "number", @class = "text-white" })
             </div>
         </div>
 
