--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -200,7 +200,7 @@
             </dt>
 
             <dd>
-                <P><a href="@Url.Content("~/PlantInfo/Nurseries/")" style="color:#FFFFFF;text-decoration:underline">Nearest nurseries</a></P>
+                <P><a href="@Url.Content("~/PlantInfo/Nurseries/")" style="color:#FDB298;text-decoration:underline">Nearest nurseries</a></P>
             </dd>
         </dl>
     </div>
