--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -27,10 +27,9 @@
             <div style="text-align:center;">
         
                 <div class="btn-group-lg col-12 col-xs-12 col-lg-offset-0 col-sm-12 col-md-12 col-md-offset-0 col-lg-12" role="group" aria-label="Flower color">
-                    <h4 style="color:#DDDDDD;margin-top:30px">Invasive plant can create a lot of damage to your garden, they prevent the growth of desirable species,</h4>
-                    <h4 style="color:#DDDDDD">and detract from the natural values of our garden.</h4>
-                    <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have You Ever Seen These Plant in Your Garden?</h1>
-                    <h4 class="white-word">Check whether the one in your garden is invasive plant by using the filter. </h4>
+                    <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:30px;">Have You Ever Seen These Plant in Your Garden?</h1>
+                    <h4 class="white-word" style="text-align:center">Invasive plant can create a lot of damage to your garden, they prevent the growth of desirable species, and detract from the natural values of our garden.</h4>
+                    <h4 class="white-word" style="margin-bottom:20px">Check whether the one in your garden is invasive plant by using the filter. </h4>
 
                     @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
                     new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
