--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         </div>
 
         <!--body-->
-        <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-12 col-md-offset-1" style="border: 0px; margin-top: 5%;margin-bottom: 10px ">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1" style="border: 0px; margin-top: 5%; ">
             <h2 class="white-word">What is an indigenous plant?</h2>
             <p class="white-word">
                 Native plants are plants that grow in a particular country like Australia. Indigenous plants are native to Australia, most importantly they are natural to your local area.
@@ -32,73 +32,63 @@
                 <li>get less plant disease and more pest resistance.</li>
             </ul>
         </div>
-        <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
+        
             <!--Our Services-->
-            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px; margin-top: 0%;margin-bottom: 0px ">
-            </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border:0px;margin-top:0%;position:relative;margin-bottom:0px;">
-                <h2 class="white-word" style="text-align: center">Our Services</h2>
-            </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px;margin-top:0%;position:relative;margin-bottom:0px;">
-            </div>
-            <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
+            
+                <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-12 col-lg-6 col-lg-offset-3" style="margin-bottom:75px">
+                    <h2 class="white-word" style="text-align:center">Our Services</h2>
+                    <!--Guidance-->
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0" style="border: 0px;margin-bottom: 100px;margin-top:30px">
 
-
-                <!--Guidance-->
-                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%;margin-bottom: 100px ">
-                    <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
-                        <br>
-                        <div style="text-align:center">
-                            <img src="~/Picture/Icon/InvasivePlants.png" style="width:60%;height:50%">
+                        <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
+                            <br>
+                            <div style="text-align:center">
+                                <img src="~/Picture/Icon/InvasivePlants.png" style="width:60%;height:200px">
+                            </div>
+                            <br>
+                            <br>
+                            <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Invasive Plants</h3>
+                            <h3 style="font-size:16px;padding-left:10%;padding-right:10%;">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
+                            <br>
+                            <div style="text-align:center">
+                                <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+                            </div>
                         </div>
-                        <br>
-                        <br>
+                    </div>
 
-                        <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Invasive Plants</h3>
-                        <h3 style="font-size:16px;padding-left:10%;padding-right:10%;">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
-                        <br>
-                        <div style="text-align:center">
-                            <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">Learn more</a>
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0" style="border:0px;margin-top:30px;margin-bottom:100px;">
+                        <div class="white-word" style="background: #1E2621; border: 0px; border-radius: 10px">
+                            <br>
+                            <div style="text-align:center">
+                                <img src="~/Picture/Icon/PlantList.png" style="width:60%;height:200px">
+                            </div>
+                            <br>
+                            <br>
+                            <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Plant List</h3>
+                            <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
+                            <br>
+                            <div style="text-align:center">
+                                <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;margin-top:20px;width:100px;height:30px;">Learn more </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0" style="border: 0px;margin-top:30px;margin-bottom:100px;">
+                        <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
+                            <br>
+                            <div style="text-align:center">
+                                <img src="~/Picture/Icon/MyGarden.png" style="width: 60%; height: 200px">
+                            </div>
+                            <br>
+                            <br>
+                            <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">My Garden</h3>
+                            <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
+                            <br>
+                            <div style="text-align:center">
+                                <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;margin-top:20px;width:100px;height:30px">Learn more </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border:0px;margin-top:10%;position:relative;margin-bottom:100px;">
-                    <div class="white-word" style="background: #1E2621; border: 0px; border-radius: 10px
-">
-                        <br>
-                        <div style="text-align:center">
-                            <img src="~/Picture/Icon/PlantList.png" style="width:60%;height:50%">
-                        </div>
-                        <br>
-                        <br>
-                        <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Plant List</h3>
-                        <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
-                        <br>
-                        <div style="text-align:center">
-                            <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px;margin-top:10%;position:relative;margin-bottom:100px;">
-                    <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
-                        <br>
-                        <div style="text-align:center">
-                            <img src="~/Picture/Icon/MyGarden.png" style="width: 60%; height: 50%">
-                        </div>
-                        <br>
-                        <br>
-
-
-                        <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">My Garden</h3>
-                        <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
-                        <br>
-                        <div style="text-align:center">
-                            <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">Learn more </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
         </div>
