--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -15,7 +15,7 @@
         
         <!--Header-->
 
-        <div class="col-12 col-md-12 col-lg-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+        <div class="col-md-12 col-lg-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:32%">
             </div>
