--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plant Info <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Planting Info", "PlantInfo", "PlantInfo")</li>
+                            <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Nearest Nurseries", "Nurseries", "PlantInfo")</li>
                             <li>@Html.ActionLink("Watering Guide", "WateringGuide", "PlantInfo")</li>
                             <li>@Html.ActionLink("Soil Types", "SoilTypes", "PlantInfo")</li>
