--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -10,13 +10,12 @@
 }
 
 
-    <div class="row" style="background-color:#4F6657;">
-
+   
         
         <!--Header-->
 
-        <div class="col-12 col-md-12 col-lg-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
-            <div>
+        <div class="col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+            <div >
                 <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:32%">
             </div>
         </div>
@@ -24,9 +23,9 @@
         <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
-            <div style="text-align:center;">
+            <div class="col-md-12" style="text-align:center;">
         
-                <div class="btn-group-lg col-12 col-xs-12 col-lg-offset-0 col-sm-12 col-md-12 col-md-offset-0 col-lg-12" role="group" aria-label="Flower color">
+                <div class="btn-group-lg col-xs-12 col-lg-offset-0 col-sm-12 col-md-12 col-md-offset-0 col-lg-12" role="group" aria-label="Flower color">
                     <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:30px;">Have You Ever Seen These Plant in Your Garden?</h1>
                     <h4 class="white-word" style="text-align:center">Invasive plant can create a lot of damage to your garden, they prevent the growth of desirable species, and detract from the natural values of our garden.</h4>
                     <h4 class="white-word" style="margin-bottom:20px">Check whether the one in your garden is invasive plant by using the filter. </h4>
@@ -51,13 +50,13 @@
             </div>
         }
 
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1" style="margin-top:50PX">
+        <div class="col-md-10 col-md-offset-1" style="margin-top:50px">
             @foreach (var item in Model)
             {
                 <!--Weed display-->
             
-                    <div class="col-xs-10 col-xs-offset-2  col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3 col-lg-offset-1" style="margin-bottom:75px;">
-                        <div class="card" style="padding:15px;width:280px;margin-top:20px;border-radius:15px;">
+                    <div class="col-xs-12 col-sm-6 col-md-4" style="margin-bottom:75px;">
+                        <div class="card" style="padding:15px;width:280px;margin:0 auto;border-radius:15px;">
                             <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
                                 <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
                             </a>
@@ -66,4 +65,4 @@
             
             }
         </div>
-    </div>
+  
